unpackaged/main/default/objects/Activity/fields/Acknowledgement__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Please check for all donation acknowledgement activities. Checkbox should remain unchecked for all other activity entries.</description>
    <inlineHelpText>Please check for all donation acknowledgement activities. Checkbox should remain unchecked for all other activity entries.</inlineHelpText>
    <label>Acknowledgement</label>
    <type>Checkbox</type>
</CustomField>