unpackaged/main/default/objects/Activity/fields/Activity_Constituency__c.field-meta.xml
<CustomField>
    <fullName>Activity_Constituency__c</fullName>
    <defaultValue>if ($RecordType.Name = "Reporting Date", "Development", NULL)</defaultValue>
    <label>Constituency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Climate</fullName>
            </value>
            <value>
                <fullName>Corporate Services</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Diversity</fullName>
            </value>
            <value>
                <fullName>Ecosystems</fullName>
            </value>
            <value>
                <fullName>EDAF</fullName>
            </value>
            <value>
                <fullName>EDF Alumni</fullName>
            </value>
            <value>
                <fullName>EDFBIZ</fullName>
            </value>
            <value>
                <fullName>EDF Europe</fullName>
            </value>
            <value>
                <fullName>EDF Staff</fullName>
            </value>
            <value>
                <fullName>Elected Official</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Executive Office</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Global Operations</fullName>
            </value>
            <value>
                <fullName>Global Strategy</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>Internal Audit</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Legal and Compliance</fullName>
            </value>
            <value>
                <fullName>MarComm</fullName>
            </value>
            <value>
                <fullName>Membership</fullName>
            </value>
            <value>
                <fullName>MethaneSAT</fullName>
            </value>
            <value>
                <fullName>Oceans</fullName>
            </value>
            <value>
                <fullName>Office of the Chief Economist</fullName>
            </value>
            <value>
                <fullName>Office of the Chief Scientist</fullName>
            </value>
            <value>
                <fullName>Political Affairs</fullName>
            </value>
            <value>
                <fullName>Strategic Partners</fullName>
            </value>
            <value>
                <fullName>CPP</fullName>
                <isActive>false</isActive>
                <label>CPP</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>