unpackaged/main/default/objects/Activity/fields/Activity_Name__c.field-meta.xml
<CustomField>
    <fullName>Activity_Name__c</fullName>
    <label>Activity Name</label>
    <type>TextArea</type>
</CustomField>