unpackaged/main/default/objects/Activity/fields/EDF_Participants__c.field-meta.xml
<CustomField>
    <fullName>EDF_Participants__c</fullName>
    <inlineHelpText>Staff included in this activity.</inlineHelpText>
    <label>EDF Participants</label>
    <type>TextArea</type>
</CustomField>