unpackaged/main/default/objects/Activity/fields/Meeting_Location__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Location__c</fullName>
    <description>Created as a part of Data Migration 2021.</description>
    <label>Meeting Location</label>
    <type>TextArea</type>
</CustomField>