unpackaged/main/default/objects/Activity/fields/Meeting_Objective__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Objective__c</fullName>
    <description>Created as a part of Heller Data Migration 2021.</description>
    <label>Meeting Objective</label>
    <type>TextArea</type>
</CustomField>