unpackaged/main/default/objects/Activity/fields/npsp__Engagement_Plan__c.field-meta.xml
<CustomField>
    <fullName>npsp__Engagement_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement Plan</label>
    <referenceTo>npsp__Engagement_Plan__c</referenceTo>
    <relationshipLabel>Tasks</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>