unpackaged/main/default/objects/Activity/fields/Outreach_Stage__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Stage__c</fullName>
    <description>Created as a part of Data Migration 2021.</description>
    <label>Outreach Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internally Requested</fullName>
            </value>
            <value>
                <fullName>Internally Approved</fullName>
            </value>
            <value>
                <fullName>Offer Drafted</fullName>
            </value>
            <value>
                <fullName>Offered</fullName>
            </value>
            <value>
                <fullName>In the Works</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>