unpackaged/main/default/objects/Activity/fields/Portfolio_Manager__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Manager__c</fullName>
    <label>Portfolio Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Abigail Ettelman</fullName>
            </value>
            <value>
                <fullName>Adrienne Allen</fullName>
            </value>
            <value>
                <fullName>Allison Bredbenner</fullName>
            </value>
            <value>
                <fullName>Amanda Das</fullName>
            </value>
            <value>
                <fullName>Amanda Lichtenberg</fullName>
            </value>
            <value>
                <fullName>Amélie Poojary</fullName>
            </value>
            <value>
                <fullName>Amy Van Ry</fullName>
            </value>
            <value>
                <fullName>Andrea Daly</fullName>
            </value>
            <value>
                <fullName>Andrew Malloy</fullName>
            </value>
            <value>
                <fullName>Anne Marie Halsey</fullName>
            </value>
            <value>
                <fullName>Annie Mark</fullName>
            </value>
            <value>
                <fullName>Anouska Cheddie</fullName>
            </value>
            <value>
                <fullName>Asmita Patwardhan</fullName>
            </value>
            <value>
                <fullName>Bao Kieu</fullName>
            </value>
            <value>
                <fullName>Barbara McCullough</fullName>
            </value>
            <value>
                <fullName>Bessie Taliaferro</fullName>
            </value>
            <value>
                <fullName>Briana Cole</fullName>
            </value>
            <value>
                <fullName>Brian Dill</fullName>
            </value>
            <value>
                <fullName>Brianne Kilpatrick</fullName>
            </value>
            <value>
                <fullName>Brittany Janis</fullName>
            </value>
            <value>
                <fullName>Bryony Worthington</fullName>
            </value>
            <value>
                <fullName>Caroline Schiavo</fullName>
            </value>
            <value>
                <fullName>Charlotte Mikk</fullName>
            </value>
            <value>
                <fullName>Chévon Deputy</fullName>
            </value>
            <value>
                <fullName>Chria Hazlitt</fullName>
            </value>
            <value>
                <fullName>Christa Ogata</fullName>
            </value>
            <value>
                <fullName>Christie Thomas</fullName>
            </value>
            <value>
                <fullName>Cori Roach</fullName>
            </value>
            <value>
                <fullName>Cyane Anaya</fullName>
            </value>
            <value>
                <fullName>Cynthia DiLeo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>