unpackaged/main/default/objects/Activity/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <description>This activity supports this cross-cutting EDF project</description>
    <inlineHelpText>This activity supports this cross-cutting EDF project</inlineHelpText>
    <label>Project</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clean Air</fullName>
            </value>
            <value>
                <fullName>Earth Fund</fullName>
            </value>
            <value>
                <fullName>Puerto Rico</fullName>
            </value>
            <value>
                <fullName>Activism General</fullName>
                <isActive>false</isActive>
                <label>Activism General</label>
            </value>
            <value>
                <fullName>Advocacy</fullName>
                <isActive>false</isActive>
                <label>Advocacy</label>
            </value>
            <value>
                <fullName>Affiliate Advocacy</fullName>
                <isActive>false</isActive>
                <label>Affiliate Advocacy</label>
            </value>
            <value>
                <fullName>Agriculture Finance</fullName>
                <isActive>false</isActive>
                <label>Agriculture Finance</label>
            </value>
            <value>
                <fullName>Air Quality</fullName>
                <isActive>false</isActive>
                <label>Air Quality</label>
            </value>
            <value>
                <fullName>Air Quality - Power Plants</fullName>
                <isActive>false</isActive>
                <label>Air Quality - Power Plants</label>
            </value>
            <value>
                <fullName>Ambassadors</fullName>
                <isActive>false</isActive>
                <label>Ambassadors</label>
            </value>
            <value>
                <fullName>Behavioral/Social Science</fullName>
                <isActive>false</isActive>
                <label>Behavioral/Social Science</label>
            </value>
            <value>
                <fullName>Big Energy Data</fullName>
                <isActive>false</isActive>
                <label>Big Energy Data</label>
            </value>
            <value>
                <fullName>Building Electrification</fullName>
                <isActive>false</isActive>
                <label>Building Electrification</label>
            </value>
            <value>
                <fullName>Carbon Markets - Agriculture</fullName>
                <isActive>false</isActive>
                <label>Carbon Markets - Agriculture</label>
            </value>
            <value>
                <fullName>Carbon Markets - Aviation</fullName>
                <isActive>false</isActive>
                <label>Carbon Markets - Aviation</label>
            </value>
            <value>
                <fullName>Carbon Markets - Club</fullName>
                <isActive>false</isActive>
                <label>Carbon Markets - Club</label>
            </value>
            <value>
                <fullName>Carbon Markets - Design and Capacity Building</fullName>
                <isActive>false</isActive>
                <label>Carbon Markets - Design and Capacity Building</label>
            </value>
            <value>
                <fullName>Carbon Markets - General</fullName>
                <isActive>false</isActive>
                <label>Carbon Markets - General</label>
            </value>
            <value>
                <fullName>Carbon Markets - UNFCCC</fullName>
                <isActive>false</isActive>
                <label>Carbon Markets - UNFCCC</label>
            </value>
            <value>
                <fullName>Clean Air - Power Plant Standards</fullName>
                <isActive>false</isActive>
                <label>Clean Air - Power Plant Standards</label>
            </value>
            <value>
                <fullName>Clean Air - Utilities (PA)</fullName>
                <isActive>false</isActive>
                <label>Clean Air - Utilities (PA)</label>
            </value>
            <value>
                <fullName>Clean Energy General</fullName>
                <isActive>false</isActive>
                <label>Clean Energy General</label>
            </value>
            <value>
                <fullName>Clean Energy Jobs</fullName>
                <isActive>false</isActive>
                <label>Clean Energy Jobs</label>
            </value>
            <value>
                <fullName>Clean Power</fullName>
                <isActive>false</isActive>
                <label>Clean Power</label>
            </value>
            <value>
                <fullName>Clean Power (PA)</fullName>
                <isActive>false</isActive>
                <label>Clean Power (PA)</label>
            </value>
            <value>
                <fullName>Clean Power Plan - Litigation</fullName>
                <isActive>false</isActive>
                <label>Clean Power Plan - Litigation</label>
            </value>
            <value>
                <fullName>Clean Shipping</fullName>
                <isActive>false</isActive>
                <label>Clean Shipping</label>
            </value>
            <value>
                <fullName>Climate &amp; Air - General</fullName>
                <isActive>false</isActive>
                <label>Climate &amp; Air - General</label>
            </value>
            <value>
                <fullName>Climate &amp; Air - Port &amp; Hot Spot</fullName>
                <isActive>false</isActive>
                <label>Climate &amp; Air - Port &amp; Hot Spot</label>
            </value>
            <value>
                <fullName>Climate &amp; Air - Ports and Hot Spots</fullName>
                <isActive>false</isActive>
                <label>Climate &amp; Air - Ports and Hot Spots</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>