unpackaged/main/default/objects/Activity/fields/Project_Description__c.field-meta.xml
<CustomField>
    <fullName>Project_Description__c</fullName>
    <description>Description of the work being funded by the donor – were their funds directed to a particular aspect or with a specific outcome in mind?</description>
    <inlineHelpText>Include a description of the work being funded by the donor – were their funds directed to a particular aspect or with a specific outcome in mind?</inlineHelpText>
    <label>Project Description</label>
    <type>TextArea</type>
</CustomField>