unpackaged/main/default/objects/Activity/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Regional_Interest</valueSetName>
    </valueSet>
</CustomField>