unpackaged/main/default/objects/Activity/fields/Related_Contact_Report__c.field-meta.xml
<CustomField>
    <fullName>Related_Contact_Report__c</fullName>
    <description>Link to a dynamic report of Related Contacts.</description>
    <formula>HYPERLINK("/lightning/r/Report/00O8W000007hlK4UAI/view?fv0=" &amp; Id , "Link" )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Links to a dynamic report of Related Contacts.</inlineHelpText>
    <label>Related Contact Report</label>
    <type>Text</type>
</CustomField>