unpackaged/main/default/objects/Activity/fields/Related_Deliverable__c.field-meta.xml
<CustomField>
    <fullName>Related_Deliverable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reporting Date Deliverable that created the Task.</description>
    <inlineHelpText>Reporting Date Deliverable that created the Task.</inlineHelpText>
    <label>Related Deliverable</label>
    <referenceTo>npsp__Grant_Deadline__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>