unpackaged/main/default/objects/Activity/fields/Report_Link__c.field-meta.xml
<CustomField>
    <fullName>Report_Link__c</fullName>
    <label>Report Link</label>
    <type>Url</type>
</CustomField>