unpackaged/main/default/objects/Activity/fields/Solicitor_3__c.field-meta.xml
<CustomField>
    <fullName>Solicitor_3__c</fullName>
    <label>EDF Participant 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Solicitors</valueSetName>
    </valueSet>
</CustomField>