unpackaged/main/default/objects/Activity/fields/Solicitor_is_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Solicitor_is_Current_User__c</fullName>
    <formula>TEXT(Solicitor_1__c) = SUBSTITUTE($User.FirstName, " ", "\\") + " " + SUBSTITUTE($User.LastName, " ", "\\")  || 
TEXT(Solicitor_2__c) = SUBSTITUTE($User.FirstName, " ", "\\") + " " + SUBSTITUTE($User.LastName, " ", "\\")  || 
TEXT(Solicitor_3__c) = SUBSTITUTE($User.FirstName, " ", "\\") + " " + SUBSTITUTE($User.LastName, " ", "\\")  || 
TEXT(Solicitor_4__c) = SUBSTITUTE($User.FirstName, " ", "\\") + " " + SUBSTITUTE($User.LastName, " ", "\\")  || 
TEXT(Solicitor_5__c) = SUBSTITUTE($User.FirstName, " ", "\\") + " " + SUBSTITUTE($User.LastName, " ", "\\")</formula>
    <label>Solicitor is Current User</label>
    <type>Checkbox</type>
</CustomField>