unpackaged/main/default/objects/Activity/fields/Source_Data_Table__c.field-meta.xml
<CustomField>
    <fullName>Source_Data_Table__c</fullName>
    <label>Source Data Table</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stewardship Task</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>