unpackaged/main/default/objects/Activity/fields/Staff_Ids__c.field-meta.xml
<CustomField>
    <fullName>Staff_Ids__c</fullName>
    <description>Ids of staff in Name field</description>
    <label>Staff Ids</label>
    <type>TextArea</type>
</CustomField>