unpackaged/main/default/objects/Activity/fields/Staff_is_in_Name__c.field-meta.xml
<CustomField>
    <fullName>Staff_is_in_Name__c</fullName>
    <formula>CONTAINS( Staff_Ids__c, $User.User_Contact_ID__c) ||  Owner:User.Id =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Staff is Viewer</label>
    <type>Checkbox</type>
</CustomField>